--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native": "0.75.3",
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.20.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-localize": "^3.2.1",
     "react-native-mmkv": "^2.12.2",
     "react-native-network-logger": "^1.17.0",
