--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "preandroid": "ENVFILE=.env",
     "ios": "react-native run-ios",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
+    "lint:skip": "echo 'Linting skipped'",
     "postinstall": "npx pod-install",
-    "prepare": "husky",
+    "prepare": "husky install",
     "refresh": "bash ./scripts/refresh.sh",
     "start": "NODE_ENV=default APP_ENV=default npx react-native start --reset-cache",
     "start:development": "NODE_ENV=development APP_ENV=development npx react-native start --reset-cache",
@@ -24,9 +26,15 @@
     "typescript": "tsc --noEmit"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/netinfo": "^11.4.1",
-    "@react-navigation/native": "^6.1.18",
+    "@react-native-community/slider": "^4.5.6",
+    "@react-native-masked-view/masked-view": "^0.3.2",
+    "@react-navigation/bottom-tabs": "^7.3.13",
+    "@react-navigation/drawer": "^7.3.12",
+    "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^6.11.0",
+    "@react-navigation/stack": "^7.3.2",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.7",
     "formik": "^2.4.6",
@@ -34,15 +42,17 @@
     "react": "18.3.1",
     "react-native": "0.75.3",
     "react-native-fast-image": "^8.6.3",
-    "react-native-gesture-handler": "^2.20.0",
+    "react-native-gesture-handler": "^2.25.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-localize": "^3.2.1",
     "react-native-mmkv": "^2.12.2",
     "react-native-network-logger": "^1.17.0",
-    "react-native-reanimated": "^3.15.3",
-    "react-native-safe-area-context": "^4.11.0",
-    "react-native-screens": "^3.34.0",
-    "react-native-svg": "^15.7.1",
+    "react-native-safe-area-context": "^5.4.0",
+    "react-native-screens": "^4.10.0",
+    "react-native-splash-screen": "^3.3.0",
+    "react-native-svg": "^15.11.2",
+    "react-native-track-player": "^4.1.1",
+    "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
@@ -64,9 +74,11 @@
     "@types/jest": "^29.5.13",
     "@types/react": "^18.3.9",
     "@types/react-native": "^0.72.8",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^8.7.0",
     "@typescript-eslint/parser": "^8.7.0",
+    "autoprefixer": "^10.4.21",
     "babel-jest": "^29.7.0",
     "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^9.11.1",
@@ -82,10 +94,16 @@
     "eslint-plugin-sort-keys-fix": "^1.1.2",
     "husky": "^9.1.6",
     "jest": "^29.7.0",
+    "metro-react-native-babel-preset": "^0.77.0",
+    "module-resolver": "^1.0.0",
+    "nativewind": "^2.0.11",
+    "postcss": "^8.5.3",
     "prettier": "^3.5.3",
     "react-native-dotenv": "^3.4.11",
+    "react-native-reanimated": "^3.17.5",
     "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "18.3.1",
+    "tailwindcss": "^3.4.17",
     "typescript": "5.6.2"
   },
   "engines": {
